Working to get google authentication working for signup/login

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400&family=Open+Sans:wght@400;700&display=swap"
     rel="stylesheet" />
+  <script src="https://accounts.google.com/gsi/client" async defer></script> <!-- Google account authentication script-->
   <title>Encyclone</title>
 </head>
 
